--- a/src/components/piano-keyboard/piano-keyboard.module.css
+++ b/src/components/piano-keyboard/piano-keyboard.module.css
@@ -3,11 +3,12 @@
   width: 100%;
   height: 100%;
   position: relative;
-  /* Columns = End Unit - Start Unit */
-  grid-template-columns: repeat(calc(var(--end-unit) - var(--start-unit)), 1fr);
+  /* Columns = End Unit - Start Unit. Use minmax(0, 1fr) to prevent squishing by items that fall outside column 1. */
+  grid-template-columns: repeat(calc(var(--end-unit) - var(--start-unit)), minmax(0, 1fr));
   /* Rows: Key Top (2/3), Key Bottom (1/3) */
   grid-template-rows: 2fr 1fr;
   user-select: none;
+  overflow: hidden;
 }
 
 .key {
@@ -23,6 +24,7 @@
   align-items: flex-end;
   justify-content: center;
   padding-bottom: 0.5rem;
+  min-width: 0;
 }
 
 .key[data-black="true"] {
